# ionq_core/api/default/move_job.py
@@ -12,43 +12,62 @@ from ...client import AuthenticatedClient, Client
 from ...types import Response, UNSET
 from ... import errors
 
-from ...models.get_variant_results_response import GetVariantResultsResponse
+from ...models.clone_job_payload import CloneJobPayload
+from ...models.job_creation_response import JobCreationResponse
 from typing import cast
 
 
 
 def _get_kwargs(
     uuid: str,
-    variant_id: str,
+    *,
+    body: CloneJobPayload,
 
 ) -> dict[str, Any]:
-    
+    headers: dict[str, Any] = {}
+
 
     
 
     
 
     _kwargs: dict[str, Any] = {
-        "method": "get",
-        "url": "/jobs/{uuid}/variants/{variant_id}/results/histogram".format(uuid=quote(str(uuid), safe=""),variant_id=quote(str(variant_id), safe=""),),
+        "method": "post",
+        "url": "/jobs/{uuid}/move".format(uuid=quote(str(uuid), safe=""),),
     }
 
+    _kwargs["json"] = body.to_dict()
 
+    headers["Content-Type"] = "application/json"
+
+    _kwargs["headers"] = headers
     return _kwargs
 
 
 
-def _parse_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> Any | GetVariantResultsResponse | None:
-    if response.status_code == 200:
-        response_200 = GetVariantResultsResponse.from_dict(response.json())
+def _parse_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> Any | JobCreationResponse | None:
+    if response.status_code == 201:
+        response_201 = JobCreationResponse.from_dict(response.json())
 
 
 
-        return response_200
+        return response_201
 
-    if response.status_code == 404:
-        response_404 = cast(Any, None)
-        return response_404
+    if response.status_code == 429:
+        response_429 = cast(Any, None)
+        return response_429
+
+    if response.status_code == 500:
+        response_500 = cast(Any, None)
+        return response_500
+
+    if response.status_code == 502:
+        response_502 = cast(Any, None)
+        return response_502
+
+    if response.status_code == 503:
+        response_503 = cast(Any, None)
+        return response_503
 
     if client.raise_on_unexpected_status:
         raise errors.UnexpectedStatus(response.status_code, response.content)
@@ -56,7 +75,7 @@ def _parse_response(*, client: AuthenticatedClient | Client, response: httpx.Res
         return None
 
 
-def _build_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> Response[Any | GetVariantResultsResponse]:
+def _build_response(*, client: AuthenticatedClient | Client, response: httpx.Response) -> Response[Any | JobCreationResponse]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -67,28 +86,28 @@ def _build_response(*, client: AuthenticatedClient | Client, response: httpx.Res
 
 def sync_detailed(
     uuid: str,
-    variant_id: str,
     *,
     client: AuthenticatedClient,
+    body: CloneJobPayload,
 
-) -> Response[Any | GetVariantResultsResponse]:
+) -> Response[Any | JobCreationResponse]:
     """ 
     Args:
         uuid (str):
-        variant_id (str):
+        body (CloneJobPayload): Make all properties in T optional
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[Any | GetVariantResultsResponse]
+        Response[Any | JobCreationResponse]
      """
 
 
     kwargs = _get_kwargs(
         uuid=uuid,
-variant_id=variant_id,
+body=body,
 
     )
 
@@ -100,56 +119,56 @@ variant_id=variant_id,
 
 def sync(
     uuid: str,
-    variant_id: str,
     *,
     client: AuthenticatedClient,
+    body: CloneJobPayload,
 
-) -> Any | GetVariantResultsResponse | None:
+) -> Any | JobCreationResponse | None:
     """ 
     Args:
         uuid (str):
-        variant_id (str):
+        body (CloneJobPayload): Make all properties in T optional
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Any | GetVariantResultsResponse
+        Any | JobCreationResponse
      """
 
 
     return sync_detailed(
         uuid=uuid,
-variant_id=variant_id,
 client=client,
+body=body,
 
     ).parsed
 
 async def asyncio_detailed(
     uuid: str,
-    variant_id: str,
     *,
     client: AuthenticatedClient,
+    body: CloneJobPayload,
 
-) -> Response[Any | GetVariantResultsResponse]:
+) -> Response[Any | JobCreationResponse]:
     """ 
     Args:
         uuid (str):
-        variant_id (str):
+        body (CloneJobPayload): Make all properties in T optional
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[Any | GetVariantResultsResponse]
+        Response[Any | JobCreationResponse]
      """
 
 
     kwargs = _get_kwargs(
         uuid=uuid,
-variant_id=variant_id,
+body=body,
 
     )
 
@@ -161,28 +180,28 @@ variant_id=variant_id,
 
 async def asyncio(
     uuid: str,
-    variant_id: str,
     *,
     client: AuthenticatedClient,
+    body: CloneJobPayload,
 
-) -> Any | GetVariantResultsResponse | None:
+) -> Any | JobCreationResponse | None:
     """ 
     Args:
         uuid (str):
-        variant_id (str):
+        body (CloneJobPayload): Make all properties in T optional
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Any | GetVariantResultsResponse
+        Any | JobCreationResponse
      """
 
 
     return (await asyncio_detailed(
         uuid=uuid,
-variant_id=variant_id,
 client=client,
+body=body,
 
     )).parsed
